# bindport

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  book.toml  cliff.toml  mise.toml
.github/: dependabot.yml
crates/bindport/: Cargo.toml
crates/bindport-adapters/: Cargo.toml
crates/bindport-adapters/src/: hash.rs  kind.rs  lib.rs  ownership.rs  render.rs  resolver.rs  templates.rs
crates/bindport-adapters/src/ownership/: diff.rs  paths.rs  remove.rs  types.rs  write.rs
crates/bindport-adapters/src/unit_tests/: cleanup.rs  mod.rs  plan.rs  render.rs  templates.rs
crates/bindport-adapters/templates/: bindport-caddy.caddy.j2  bindport-env-local.env.j2  bindport-haproxy.cfg.j2  bindport-json-snapshot.json.j2  bindport-nginx.conf.j2  bindport-traefik.yml.j2
crates/bindport-core/: Cargo.toml
crates/bindport-core/src/: config.rs  constants.rs  hash.rs  identity.rs  lib.rs  paths.rs  ports.rs  validation.rs  workspace.rs
crates/bindport-core/src/config/: fallback.rs  load.rs  merge.rs  schema.rs  yaml.rs
crates/bindport-core/src/unit_tests/: config.rs  config_contract.rs  identity.rs  mod.rs  outputs.rs  ports.rs  services.rs  validation.rs
crates/bindport-core/src/validation/: env.rs  hooks.rs  issue.rs  outputs.rs  services.rs
crates/bindport-core/tests/fixtures/: config-v1-candidate.json  config-v1-candidate.toml  config-v1-candidate.yaml
crates/bindport-dashboard/: Cargo.toml
crates/bindport-dashboard/src/: assets.rs  auth.rs  constants.rs  error.rs  lib.rs  options.rs  request.rs  response.rs  routing.rs  server.rs
crates/bindport-dashboard/src/unit_tests/: assets.rs  auth.rs  clean.rs  mod.rs  request.rs  response.rs  routing.rs  server.rs
crates/bindport-dashboard/static/: app.css  app.js  dev-reload.js  index.html
crates/bindport-registry/: Cargo.toml
crates/bindport-registry/src/: cleanup.rs  clock.rs  connection.rs  constants.rs  error.rs  export.rs  health.rs  lease.rs  lib.rs  outputs.rs  process.rs  schema.rs  service.rs  status.rs
crates/bindport-registry/src/unit_tests/: cleanup.rs  export.rs  health.rs  leases.rs  mod.rs  outputs.rs  registry.rs  service.rs  status.rs
crates/bindport-registry/tests/: migrations.rs
crates/bindport-registry/tests/fixtures/: v0.1.0-user-version-2.sql  v0.2.0-user-version-3.sql  v0.3.0-v0.4.0-user-version-6.sql  v0.5.0-user-version-7.sql  v0.5.1-v0.6.x-user-version-8.sql  v0.7.0-current-user-version-9.sql
crates/bindport/src/: clean.rs  config.rs  dashboard.rs  doctor.rs  errors.rs  help.rs  hooks.rs  list.rs  logging.rs  main.rs  open.rs  paths.rs  ports.rs  registry.rs  render.rs  reserve.rs  route_events.rs  run.rs  status.rs  templates.rs
crates/bindport/src/clean/: commands.rs  errors.rs  options.rs  output.rs
crates/bindport/src/config/: commands.rs  explain.rs  init.rs  resolve.rs
crates/bindport/src/config/explain/: fields.rs  identity.rs  labels.rs  source.rs
crates/bindport/src/dashboard/: commands.rs  errors.rs  options.rs  registration.rs  service.rs  state.rs
crates/bindport/src/dashboard/options/: env.rs  model.rs  parse.rs  resolve.rs
crates/bindport/src/doctor/: commands.rs  diagnostics.rs  listeners.rs  outputs.rs
crates/bindport/src/hooks/: commands.rs  execution.rs  model.rs  plan.rs  trust.rs
crates/bindport/src/hooks/commands/: entry.rs  errors.rs  options.rs  status.rs  trust.rs
crates/bindport/src/hooks/execution/: environment.rs  process.rs  runner.rs
crates/bindport/src/hooks/plan/: builder.rs  definition.rs  source.rs  target.rs
crates/bindport/src/hooks/trust/: decisions.rs  model.rs  status.rs  store.rs  subjects.rs
crates/bindport/src/open/: browser.rs  commands.rs  errors.rs  options.rs  selection.rs
crates/bindport/src/render/: commands.rs  errors.rs  lifecycle.rs  outputs.rs  routes.rs
crates/bindport/src/render/commands/: auto.rs  entry.rs  model.rs  parse.rs  validate.rs
crates/bindport/src/render/outputs/: config.rs  diff.rs  engine.rs  repair.rs  scope.rs
crates/bindport/src/run/: errors.rs  execution.rs  identity.rs  options.rs  prune.rs  status.rs  templates.rs
crates/bindport/src/run/templates/: command.rs  errors.rs  expand.rs  model.rs  resolve.rs
crates/bindport/src/templates/: commands.rs  errors.rs  output.rs  parse.rs  resolver.rs
crates/bindport/src/unit_tests/: clean_open.rs  dashboard.rs  diagnostics.rs  dispatch.rs  hooks.rs  list.rs  mod.rs  render.rs  route_events.rs  run.rs  templates.rs
crates/bindport/tests/: concurrency.rs  config.rs  dashboard.rs  doctor.rs  hooks.rs  port.rs  registry_export.rs  reserve_release.rs  run.rs  runner.rs  status_open_clean.rs  templates_render.rs
crates/bindport/tests/config/: contract.rs  discovery.rs  examples.rs  fallback.rs  overrides.rs  validation.rs
crates/bindport/tests/dashboard/: clean.rs  options.rs  registration.rs  routing.rs  service.rs  status.rs
crates/bindport/tests/hooks/: execution.rs  repo.rs  trust.rs
crates/bindport/tests/run/: allocation.rs  basic.rs  configured.rs  cross_service.rs  package.rs  reserved.rs  signals.rs  templates.rs
crates/bindport/tests/status_open_clean/: clean.rs  export.rs  list.rs  open.rs  status.rs
crates/bindport/tests/status_open_clean/status/: basic.rs  identity.rs  schema.rs
crates/bindport/tests/support/: command.rs  dashboard.rs  data.rs  git.rs  mod.rs  process.rs  registry.rs  temp.rs  wait.rs
crates/bindport/tests/templates_render/: auto.rs  manual.rs  templates.rs
docs/: 404.md  README.md  SUMMARY.md  adoption.md  config.md  config.schema.json  dashboard.md  llms-full.txt  llms.txt  monorepos.md  platform-support.md  release.md  status.md  status.schema.json  templates.md
examples/: README.md
scripts/: cargo-publish.sh  check-binstall-metadata.js  check-cli-assets.sh  check-homebrew-formula.sh  check-platform-cfg-guards.py  docs-build.sh  docs-serve.sh  homebrew-formula.sh  npm-package-utils.js  npm-publish.sh  npm-smoke.sh  npm-stage-platform-package.sh  release-check.sh  release-finish.sh  release-pr.sh  release-prep.sh  (+2 more)
(+66 files in other folders)
