# SPDX-License-Identifier: MIT

[workspace]
members = [
    "crates/bindport",
    "crates/bindport-adapters",
    "crates/bindport-core",
    "crates/bindport-registry",
    "crates/bindport-runner",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["Michael Stutz <michaeljstutz@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/bindport/bindport"
readme = "README.md"

[workspace.dependencies]
bindport-adapters = { path = "crates/bindport-adapters" }
bindport-core = { path = "crates/bindport-core" }
bindport-registry = { path = "crates/bindport-registry" }
bindport-runner = { path = "crates/bindport-runner" }
libc = "0.2.178"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "=1.0.133"
toml = "1.1.2"
serde_yaml_ng = "0.10.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
