# SPDX-License-Identifier: MIT

[workspace]
members = [
    "crates/bindport",
    "crates/bindport-adapters",
    "crates/bindport-core",
    "crates/bindport-dashboard",
    "crates/bindport-registry",
    "crates/bindport-runner",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.7.0"
edition = "2024"
authors = ["Michael Stutz <michaeljstutz@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/bindport/bindport"
readme = "README.md"

[workspace.dependencies]
bindport-adapters = { path = "crates/bindport-adapters", version = "0.7.0" }
bindport-core = { path = "crates/bindport-core", version = "0.7.0" }
bindport-dashboard = { path = "crates/bindport-dashboard", version = "0.7.0" }
bindport-registry = { path = "crates/bindport-registry", version = "0.7.0" }
bindport-runner = { path = "crates/bindport-runner", version = "0.7.0" }
libc = "0.2.186"
minijinja = { version = "2.21.0", features = ["fuel", "json"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "=1.0.146"
sha2 = "0.11.0"
toml = "1.1.2"
serde_yaml_ng = "0.10.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
