# SPDX-License-Identifier: MIT

[package]
name = "bindport-adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "BindPort proxy adapter primitives."

[dependencies]
bindport-core.workspace = true
minijinja.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
