# SPDX-License-Identifier: MIT

[package]
name = "bindport-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "BindPort core configuration, identity, and port model primitives."

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
toml.workspace = true
