# SPDX-License-Identifier: MIT

[package]
name = "bindport-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Local read-only dashboard server for BindPort."

[dependencies]
bindport-core.workspace = true
bindport-registry.workspace = true
serde_json.workspace = true
