# SPDX-License-Identifier: MIT

[package]
name = "bindport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Proxy-neutral local development port registry and runner."

[package.metadata.binstall]
pkg-fmt = "bin"
bin-dir = "{ bin }{ binary-ext }"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/bindport-macos-arm64{ archive-suffix }"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/bindport-linux-arm64{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/bindport-macos-x64{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/bindport-linux-x64{ archive-suffix }"

[dependencies]
bindport-adapters.workspace = true
bindport-core.workspace = true
bindport-dashboard.workspace = true
bindport-registry.workspace = true
bindport-runner.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
rusqlite.workspace = true
